profilelist1exp/unpackaged/objects/Deal_Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>CSB11</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Email_ANZ__c</fullName>
        <defaultValue>&apos;ANZ_Deal_Registration@dell.com&apos;</defaultValue>
        <label>Additional Email ANZ</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_China__c</fullName>
        <defaultValue>&apos;China_DealRegistration_Desk@Dell.com&apos;</defaultValue>
        <label>Additional Email China</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_EMEA__c</fullName>
        <defaultValue>&apos;EMEA.DellEMC.DealRegistration@dell.com&apos;</defaultValue>
        <label>Additional Email EMEA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_HKTW__c</fullName>
        <defaultValue>&apos;HKTW_DealRegistration_Desk@dell.com&apos;</defaultValue>
        <label>Additional Email HKTW</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_INDIA__c</fullName>
        <defaultValue>&apos;INDIA_Deal_Registration@Dell.com&apos;</defaultValue>
        <label>Additional Email INDIA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_JP__c</fullName>
        <defaultValue>&apos;JPPartnerDeal@Dell.com&apos;</defaultValue>
        <label>Additional Email JP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_KR__c</fullName>
        <defaultValue>&apos;KR_Deal_Registration@Dell.com&apos;</defaultValue>
        <label>Additional Email KR</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Latam__c</fullName>
        <defaultValue>&apos;LATAM_Deal_Registration@dell.com&apos;</defaultValue>
        <label>Additional Email Latam</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_NA__c</fullName>
        <defaultValue>&apos;NA_Deal_Registration@dell.com&apos;</defaultValue>
        <label>Additional Email NA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_SAT__c</fullName>
        <defaultValue>&apos;SAT_Deal_Registration@Dell.com&apos;</defaultValue>
        <label>Additional Email SAT</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <label>.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CFL</fullName>
                </value>
                <value>
                    <fullName>DELL CHANNEL</fullName>
                </value>
                <value>
                    <fullName>DELL DIRECT FIELD</fullName>
                </value>
                <value>
                    <fullName>DELL DIRECT INSIDE</fullName>
                </value>
                <value>
                    <fullName>DELL GSI</fullName>
                </value>
                <value>
                    <fullName>DELL OEM</fullName>
                </value>
                <value>
                    <fullName>DELL QUEUE</fullName>
                </value>
                <value>
                    <fullName>DELL SALES MGMT</fullName>
                </value>
                <value>
                    <fullName>DELL SPECIALIST</fullName>
                </value>
                <value>
                    <fullName>DELL UNASSIGNED</fullName>
                </value>
                <value>
                    <fullName>Disti Led</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTION</fullName>
                </value>
                <value>
                    <fullName>INDIRECT</fullName>
                </value>
                <value>
                    <fullName>Inside  Led</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
                <value>
                    <fullName>Outside Led</fullName>
                </value>
                <value>
                    <fullName>Partner Led</fullName>
                </value>
                <value>
                    <fullName>Web/Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Valid_for_Rebate__c</fullName>
        <inlineHelpText>Number of Days between Deal Approved Date and Invoice Date</inlineHelpText>
        <label>Days Valid for Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Program_Description__c</fullName>
        <label>Program Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>PRM Ops Admin users should be able to select the Deal Type for each program.
Deal Type values: - same as the values in the Deal Type multi-pick list on the Deal Reg opportunity.</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <isActive>false</isActive>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Existing Customer/LOBS</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>GLOBAL ALLIANCES</fullName>
                </value>
                <value>
                    <fullName>Global Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>GSI</fullName>
                    <isActive>false</isActive>
                    <label>GSI</label>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Incumbency</fullName>
                </value>
                <value>
                    <fullName>Internal Use</fullName>
                </value>
                <value>
                    <fullName>Joint Initiative</fullName>
                    <isActive>false</isActive>
                    <label>Joint Initiative</label>
                </value>
                <value>
                    <fullName>Line Of Business Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Line Of Business Expansion</label>
                </value>
                <value>
                    <fullName>NBI</fullName>
                    <isActive>false</isActive>
                    <label>NBI</label>
                </value>
                <value>
                    <fullName>NBI-Line Of Business Expansion</fullName>
                </value>
                <value>
                    <fullName>NBI-New Customer</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                    <isActive>false</isActive>
                    <label>New Customer</label>
                </value>
                <value>
                    <fullName>OEM Design</fullName>
                </value>
                <value>
                    <fullName>OEM New</fullName>
                </value>
                <value>
                    <fullName>Partner First</fullName>
                    <isActive>false</isActive>
                    <label>Partner First</label>
                </value>
                <value>
                    <fullName>Partner Preferred</fullName>
                </value>
                <value>
                    <fullName>PowerBuy</fullName>
                    <isActive>false</isActive>
                    <label>PowerBuy</label>
                </value>
                <value>
                    <fullName>Project Expand</fullName>
                    <isActive>false</isActive>
                    <label>Project Expand</label>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>SB CSS</fullName>
                    <isActive>false</isActive>
                    <label>SB CSS</label>
                </value>
                <value>
                    <fullName>Solution</fullName>
                    <isActive>false</isActive>
                    <label>Solution</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disti_Reseller_Account_Countries_s__c</fullName>
        <label>Disti/Reseller Account Country(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Distributor_Reseller_Account_Region_s__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ã?LAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disti_Reseller_Sales_Motion__c</fullName>
        <description>This is displayed in layout as the story #6410615</description>
        <label>Disti/Reseller Sales Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resell</fullName>
                </value>
                <value>
                    <fullName>Sell In</fullName>
                </value>
                <value>
                    <fullName>Sell Out Dedicated</fullName>
                </value>
                <value>
                    <fullName>Stock and Sell</fullName>
                </value>
                <value>
                    <fullName>Back to Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disti_Reseller_Zone__c</fullName>
        <description>This is used to display in layout as per the story #6410615</description>
        <label>Disti/Reseller Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Reseller_Account_Region_s__c</fullName>
        <label>Disti/Reseller Account Region(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer_LOBs__c</fullName>
        <label>End Customer LOBs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Info Mgt–Application &amp; DataIntegration</fullName>
                </value>
                <value>
                    <fullName>Info Mgt–Biz Inteligence &amp; DataAnalytics</fullName>
                </value>
                <value>
                    <fullName>Info Mgt – Database Mgt</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>Microsoft EA</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Security – Identity &amp; Access Management</fullName>
                </value>
                <value>
                    <fullName>Security – Network Security (SonicWall)</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Systems Management</fullName>
                </value>
                <value>
                    <fullName>Systems Management – Client Management</fullName>
                </value>
                <value>
                    <fullName>Systems Mgt – Performance Monitoring</fullName>
                </value>
                <value>
                    <fullName>Systems Mgt – Virtualization and Cloud</fullName>
                </value>
                <value>
                    <fullName>Systems Mgt – Windows Server Mgt</fullName>
                </value>
                <value>
                    <fullName>UCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Account_Countrys__c</fullName>
        <label>End User Account Country(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>End_User_Account_Regions__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ã?LAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Account_Regions__c</fullName>
        <label>End User Account Region(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_Sales_Channels__c</fullName>
        <inlineHelpText>Input an existing Sales Channel keyword or exact phrase e.g., FED; [100110481] OEM EAST ENTERPRISE</inlineHelpText>
        <label>Exclude Sales Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Unassigned_End_User_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Unassigned End User Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Path__c</fullName>
        <label>Fulfilment Path</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direct Fulfilment</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <inlineHelpText>An additional time period beyond the Days Valid for Rebate time limit</inlineHelpText>
        <label>Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_Sales__c</fullName>
        <inlineHelpText>Input an existing Sales Channel keyword or exact phrase e.g., FED; [100110481] OEM EAST ENTERPRISE</inlineHelpText>
        <label>Include Sales Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Must_Invoice_by_Date__c</fullName>
        <inlineHelpText>The program requires the order for this deal to be invoiced by this date</inlineHelpText>
        <label>Must Invoice by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Countrys__c</fullName>
        <label>Partner Account Country(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Partner_Account_Regions__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ã?LAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account_Regions__c</fullName>
        <label>Partner Account Region(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ;LATAM</fullName>
                </value>
                <value>
                    <fullName>APJ;EMEA</fullName>
                </value>
                <value>
                    <fullName>APJ;NA</fullName>
                </value>
                <value>
                    <fullName>EMEA;LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA;NA</fullName>
                </value>
                <value>
                    <fullName>LATAM;NA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>